[package]
name = "submetrics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git"
path = "src/main.rs"

[workspace]
members = [ 
    "smoldot-source", 
    "subxt-decoder",
    "prometheus-sink",
    "chains/*",
     ]

[dependencies]
smoldot-source = { path = "./smoldot-source" }
subxt-decoder = { path = "./subxt-decoder" }
prometheus-sink = { path = "./prometheus-sink" }
submetrics-core = { path = "./submetrics-core" }
composable = { path = "./chains/composable" }
picasso = { path = "./chains/picasso" }

async-lock = { workspace = true }
blake2-rfc = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
event-listener = { workspace = true }
fnv = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
tokio = {workspace = true}
async-std = { workspace = true }
parking_lot = { workspace = true }
env_logger = { workspace = true }


[workspace.dependencies]
sp-core-hashing = {version = "*", default-features = false}
async-lock = { version = "2.7.0", default-features = false } # TODO: no-std-ize; this is has been done and is just waiting for a release: https://github.com/smol-rs/event-listener/pull/34
blake2-rfc = { version = "0.2.18", default-features = false }
derive_more = "0.99.17"
either = { version = "1.8.1", default-features = false }
event-listener = { version = "2.5.3" }
fnv = { version = "1.0.7", default-features = false }
futures-channel = { version = "0.3.27", features = [
    "std",
    "sink",
] } # TODO: no-std-ize and remove "sink"
futures-util = { version = "0.3.27", default-features = false, features = [
    "std",
    "async-await",
    "async-await-macro",
    "channel",
    "sink",
] } # TODO: slim down these features
hashbrown = { version = "0.13.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
itertools = "0.10.5"
log = { version = "0.4.17", default-features = false }
lru = { version = "0.10.0", default-features = false } # TODO: there's no way to use a custom hasher; remove this dependency
rand = "0.8.5"
serde = { version = "1.0.160", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0.96", default-features = false, features = [
    "alloc",
] }
jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-types"], default-features = false }
slab = { version = "0.4.8", default-features = false }

async-std = { version = "1.12.0"}
parking_lot = { version = "0.12.1" }
env_logger = { version = "0.10.0" }

subxt = { git = "https://github.com/paritytech/subxt",  rev = "b632ce767353c79966817f4fb0985f6127744029", default-features = false }

smoldot-light = { git = "https://github.com/smol-dot/smoldot.git", default-features = false, features = ["std"]  }
smoldot = { git = "https://github.com/smol-dot/smoldot.git", default-features = false, features = ["std"] }
tokio = { version = "1.26", features = ["full"] }