[package]
name = "hyperspace-testsuite"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "sync", "time"] }
log = "0.4.17"
futures = "0.3.24"
json = { version = "1.0.85", package = "serde_json" }

ibc = { git = "https://github.com/composableFi/ibc-rs", rev = "9925f24c5061832ec5d5a0f4b16a1802dbb75128", features = ["ics11_beefy"] }
ibc-proto = { git = "https://github.com/composableFi/ibc-rs", rev = "9925f24c5061832ec5d5a0f4b16a1802dbb75128" }
tendermint-proto = { git = "https://github.com/composableFi/tendermint-rs", rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8" }

hyperspace = { path = "../" }
hyperspace-primitives = { path = "../primitives", features = ["testing"] }
pallet-ibc = { git = "https://github.com/ComposableFi/composable", rev = "19a408a7d696bb7e238be38ce4f89ec046a2b383" }

[dev-dependencies]
parachain = { path = "../parachain", package = "hyperspace-parachain", features = ["testing"] }
pallet-ibc = { git = "https://github.com/ComposableFi/composable", rev = "19a408a7d696bb7e238be38ce4f89ec046a2b383" }
# substrate
sp-core = "6.0.0"
sp-runtime = "6.0.0"
sp-keystore = "0.12.0"
sp-keyring = "6.0.0"
subxt = { git = "https://github.com/paritytech/subxt", rev = "ec23283d75e4b3b894294e351fd7ffa2b4431201" }
