[package]
name = "hyperspace-testsuite"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "sync", "time"] }
log = "0.4.17"
futures = "0.3.24"
json = { version = "1.0.85", package = "serde_json" }

ibc = { git = "https://github.com/composableFi/ibc-rs", rev = "9a959faabb8f2869e88327ea65a49f5697dcadf6", features = [] }
ibc-proto = { git = "https://github.com/composableFi/ibc-rs", rev = "9a959faabb8f2869e88327ea65a49f5697dcadf6" }
tendermint-proto = { git = "https://github.com/composableFi/tendermint-rs", rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8" }

hyperspace = { path = "../", features = ["testing"] }
hyperspace-primitives = { path = "../primitives", features = ["testing"] }
pallet-ibc = { git = "https://github.com/ComposableFi/composable", rev = "673b7a4d8a8919e1d4f477e00f61582623868605" }

[dev-dependencies]
parachain = { path = "../parachain", package = "hyperspace-parachain", features = ["testing"] }
# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
subxt = { git = "https://github.com/composableFi/subxt", rev = "37df0ee525252fa9a3e7730629ce0de4da9e68fd" }

# We need this so the tests run sequentially
[[test]]
name = "parachain_parachain"
harness = false