[package]
name = "beefy-light-client"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <david.salami@gmail.com>"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core-hashing = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
beefy-mmr = { package = "pallet-beefy-mmr", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-mmr = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-mmr-primitives = { package = "sp-mmr-primitives", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
beefy-primitives = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
rs_merkle = { version = "1.2.0", default-features = false }
mmr-lib= { package = "ckb-merkle-mountain-range", version = "0.3.2", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from"]  }
beefy-client-primitives = { package = "primitives", path = "../primitives", default-features = false }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
subxt = { git = "https://github.com/paritytech/subxt", rev = "c55b7ba3e34118f61dc51499a0b38262c513aec4" }
hex-literal = "0.3.4"
serde_json = "1.0.74"
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
beefy-prover = { path = "../prover" }
hex = "0.4.3"
futures = "0.3.21"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-core/std",
    "sp-io/std",
    "beefy-mmr/std",
    "beefy-primitives/std",
    "pallet-mmr/std",
    "pallet-mmr-primitives/std",
    "rs_merkle/std",
    "mmr-lib/std",
    "frame-support/std",
    "beefy-client-primitives/std",
]
