[package]
name = "composable-ops"
version = "0.1.0"
edition = "2021"
authors = [ "Composable Developers" ]

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "polkadot-v0.9.27" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
ss58-registry = "1.29"
serde = "1.0"
serde_json = "1.0"
serde_with = "2.1"
reqwest = { version = "0.11", features = [ "blocking" ] }
sha256 = "1.1"
log = "0.4"
env_logger = "0.9"
hex = "0.4"
clap = "4.0"
itertools = "0.10"
chrono = "0.4"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
pallet-crowdloan-rewards = { path = "../parachain/frame/crowdloan-rewards", default-features = false }
composable-support = { path = "../parachain/frame/composable-support", default-features = false }
composable-traits = { path = "../parachain/frame/composable-traits", default-features = false }
primitives = { path = "../parachain/runtime/primitives", default-features = false }