[workspace]
resolver = "2"
members = ["lib/*", "cosmwasm/tests", "cosmwasm/contracts/*"]

[profile.production]
inherits = "release"
lto = true

[profile.cosmwasm-contracts]
codegen-units = 1
debug = false
debug-assertions = false
inherits = "production"
opt-level = "s"
overflow-checks = true
panic = "abort"
rpath = false

[workspace.dependencies]
cosmwasm-schema = { version = "1.2.6", default-features = false}
cosmwasm-std = { git = "https://github.com/dzmitry-lahoda-forks/cosmwasm", rev = "677fa9c04b07a4934db82a6a9aa9e68fa13fcff9", default-features = false, features = [
  "iterator",
  "cosmwasm_1_2",
] }
cw-storage-plus = { git = "https://github.com/dzmitry-lahoda-forks/cw-storage-plus", rev = "1dd917aca0436c529561819399f554d825861f8d", default-features = false, features = ["std"] }

cw-utils = "1.0.1"
fixed = { version = "1.15", default-features = false }
parity-scale-codec = {  version = "3.5.0", default-features = false }
num = { version = "0.4", default-features = false }
prost = { version = "0.11.9", default-features = false, features = [
  "prost-derive",
] }
scale-info = { version = "2.7.0", default-features = false, features = [
  "derive",
] }
schemars = { version = "0.8.12" }
serde = { version = "1.0.163", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0.96" }
prost-types = { version = "0.11.9", default-features = false }
prost-build = "0.11.9"
cw20 = "1.0.1"
cw2 = "1.0.1"
thiserror = { version = "1.0.38" }

serde-cw-value = { version = "0.7.0", default-features = false}
hex = { version = "0.4", default-features = false, features = [
  "alloc",
  "serde",
] }

serde-json-wasm = {  git = "https://github.com/dzmitry-lahoda-forks/serde-json-wasm", rev = "8a7e522c0e4de36a6dfb535766f26a9941017d81",  default-features = false, features = ["std"] }
