[package]
authors = ["Composable Developers"]
homepage = "https://composable.finance"
name = "pallet-airdrop"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dev-dependencies]
hex-literal = "0.3.3"
libsecp256k1 = { version = "0.7.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
serde = "1.0.130"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

[dependencies]
libsecp256k1 = { version = "0.7.0", default-features = false, optional = true, features = [
  "hmac",
  "static-context",
] }
sp-application-crypto = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# FRAME
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# substrate primitives
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# SCALE
scale-info = { version = "1.0", default-features = false, features = [
  "derive",
] }

# misc
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.130", optional = true }

composable-support = { path = "../composable-support", default-features = false }
composable-traits = { path = "../composable-traits", default-features = false }

[features]
default = ["std"]

std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-std/std",
  "sp-arithmetic/std",
  "scale-info/std",
  "serde/std",
]

runtime-benchmarks = [
  "libsecp256k1",
  "sp-application-crypto",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]

