[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "pallet-airdrop"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.0.0"

[dev-dependencies]
composable-tests-helpers = { path = "../composable-tests-helpers" }
hex-literal = "0.3.3"
libsecp256k1 = { version = "0.7.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
proptest = "1.0"
rand_core = { version = "0.6.3", features = ["getrandom"] }
serde = "1.0.136"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

[dependencies]
libsecp256k1 = { version = "0.7.0", default-features = false, optional = true, features = [
  "hmac",
  "static-context",
] }
sp-application-crypto = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

# FRAME
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

# substrate primitives
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

# SCALE
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }

# misc
hex = { version = "0.4", default-features = false, features = ["alloc"] }
p256 = { version = "0.10.1", default-features = false, features = ["ecdsa", "ecdsa-core"] }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.136", optional = true, default-features = false }

composable-support = { path = "../composable-support", default-features = false }
composable-traits = { path = "../composable-traits", default-features = false }

[features]
default = ["std"]

std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "p256/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-std/std",
  "sp-arithmetic/std",
  "scale-info/std",
  "serde/std",
]

runtime-benchmarks = [
  "libsecp256k1",
  "sp-application-crypto",
  "sp-io/full_crypto",
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
