[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "pallet-assets"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# local
composable-traits = { path = "../composable-traits", default-features = false }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b1c9fb367ccb8e13601b2da43d1c5d9737b93c6", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
  "derive",
] }

# misc
codec = { default-features = false, features = [
  "derive",
], package = "parity-scale-codec", version = "2.0.0" }
num-traits = { version = "0.2.14", default-features = false }

[dev-dependencies]
composable-tests-helpers = { path = "../composable-tests-helpers" }
governance-registry = { package = "pallet-governance-registry", path = "../governance-registry" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b1c9fb367ccb8e13601b2da43d1c5d9737b93c6" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
proptest = "1.0"

[package.metadata.cargo-udeps.ignore]
development = ["governance-registry"]

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "composable-traits/std",
  "codec/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-api/std",
  "orml-traits/std",
  "num-traits/std",
]
